--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -44,13 +44,13 @@ header {
     /* margin: 0% 20%; */
 }
 
-header img {
+/* header img {
     max-width:150px;
     position:relative;
-}
+} */
 
 /* Nav Bar */
-nav{
+header nav{
     background-color: var(--teal);
     color:var(--text);
     text-align:center;
@@ -80,6 +80,14 @@ nav ul li {
 /* End Nav Bar */
 /* End Header */
 
+.profile {
+
+}
+
+.profile img {
+    max-width: 150px;
+}
+
 /* Cards */
 .container{
     margin: 20px auto;
@@ -95,6 +103,7 @@ nav ul li {
 .card{
     /* box-shadow: 0px 0px 20px white; */
     border: 1px var(--mint) dashed;
+    border-radius: 20px;
     max-width: 300px;
 }
 
@@ -105,6 +114,7 @@ nav ul li {
 .card-image {
     width:100%;
     display:block;
+    border-radius:20px 20px 0 0;
 }
 
 .card-content{
@@ -112,6 +122,7 @@ nav ul li {
     font-size: .9em;
     padding: 15px;
     background: var(--teal);
+    border-radius: 0 0 20px 20px;
 }
 /* Cards end */
 
@@ -133,5 +144,9 @@ footer {
     /* bottom:0; */
     /* width:100%; */
     height:2.5rem;
-    margin-top:auto;
+    padding: 10px 0;
+}
+
+footer ul li{
+    display:inline-block;
 }
