Fixed the about me background color

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -105,7 +105,8 @@ h2 {
     width:90%;
     margin:auto;
     padding:25px 0;
-    background-color: var(--teal);
+    font-size:105%;
+    /* background-color: var(--teal); */
 }
 
 
